<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/ImageView_immagineVicinoAMe"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/immagine_VicinoAMe"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">
    </ImageView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ImageView_immagineVicinoAMe"
        android:layout_toRightOf="@+id/ImageView_immagineVicinoAMe"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView_identificativoVicinoAMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/identificativo_VicinoAMe" />

        <TextView
            android:id="@+id/TextView_usernameVicinoAMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_VicinoAMe" />

        <TextView
            android:id="@+id/TextView_dataEOraVicinoAMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dataEOra_VicinoAMe" />

        <TextView
            android:id="@+id/TextView_distanzaVicinoAMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distanza_VicinoAMe" />
    </LinearLayout>

</RelativeLayout>