<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/ImageView_immagineConversazioni"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/immagine_Conversazioni"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >
    </ImageView>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ImageView_immagineConversazioni"
        android:layout_marginBottom="22dp"
        android:layout_toRightOf="@+id/ImageView_immagineConversazioni"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView_identificativoConversazioni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/identificativo_Conversazioni" />

        <TextView
            android:id="@+id/TextView_usernameConversazioni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_Conversazioni" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ImageView_messaggiDaLeggereConversazioni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignBottom="@+id/ImageView_eliminaConversazioni"
        android:layout_toLeftOf="@+id/ImageView_eliminaConversazioni"
        android:contentDescription="@string/messaggiDaLeggere_Conversazioni" />

    <TextView
        android:id="@+id/TextView_messaggiDaLeggereConversazioni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_alignTop="@+id/ImageView_messaggiDaLeggereConversazioni"
        android:layout_toLeftOf="@+id/ImageView_messaggiDaLeggereConversazioni"
        android:layout_toRightOf="@+id/linearLayout1" 
        android:text="@string/messaggiDaLeggere_Conversazioni" />

    <ImageView
        android:id="@+id/ImageView_eliminaConversazioni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/linearLayout1"
        android:clickable="true"
        android:contentDescription="@string/elimina_Conversazioni"
        android:src="@drawable/ic_action_discard" />

</RelativeLayout>